[gd_scene load_steps=15 format=3 uid="uid://bgh3wj50eylge"]

[ext_resource type="Script" path="res://demo/scenarios/interactives/interactives.gd" id="1_3ts7i"]
[ext_resource type="Script" path="res://addons/libsm64-godot/mario/sm64_mario.gd" id="3_23fop"]
[ext_resource type="PackedScene" path="res://demo/scenarios/interactives/stomp_block.tscn" id="3_anu88"]
[ext_resource type="Texture2D" uid="uid://d0ipccf6g5cxx" path="res://icon.svg" id="3_dlnrv"]
[ext_resource type="PackedScene" uid="uid://yt8kbrfd41gi" path="res://demo/shared/camera_rig.tscn" id="4_gtfal"]
[ext_resource type="Script" path="res://addons/libsm64-godot/handlers/sm64_static_surfaces_handler.gd" id="5_euurp"]
[ext_resource type="Script" path="res://addons/libsm64-godot/handlers/sm64_surface_objects_handler.gd" id="6_b7ii8"]
[ext_resource type="PackedScene" uid="uid://dprpekyttg0g6" path="res://demo/shared/hud.tscn" id="7_o8afg"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_7ddi4"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_7tqet"]
sky_material = SubResource("ProceduralSkyMaterial_7ddi4")

[sub_resource type="Environment" id="Environment_m3obt"]
background_mode = 2
sky = SubResource("Sky_7tqet")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pcbbo"]
albedo_texture = ExtResource("3_dlnrv")

[sub_resource type="PlaneMesh" id="7"]
material = SubResource("StandardMaterial3D_pcbbo")
size = Vector2(60, 40)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_mgjdh"]
radius = 1.5
height = 3.0

[node name="Interactives" type="Node3D"]
script = ExtResource("1_3ts7i")

[node name="MiniLevel" type="Node3D" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="MiniLevel"]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="MiniLevel"]
environment = SubResource("Environment_m3obt")

[node name="StaticSurfaces" type="Node3D" parent="MiniLevel"]

[node name="Platform" type="MeshInstance3D" parent="MiniLevel/StaticSurfaces" groups=["libsm64_static_surfaces"]]
mesh = SubResource("7")
skeleton = NodePath("../../..")

[node name="Objects" type="Node3D" parent="MiniLevel"]

[node name="StompBlock" parent="MiniLevel/Objects" instance=ExtResource("3_anu88")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.89533, 1.17874, 0.536876)

[node name="SM64Mario" type="Node3D" parent="." node_paths=PackedStringArray("camera") groups=["libsm64_mario"]]
script = ExtResource("3_23fop")
camera = NodePath("CameraRig/Camera3D")

[node name="CameraRig" parent="SM64Mario" instance=ExtResource("4_gtfal")]

[node name="Camera3D" parent="SM64Mario/CameraRig" index="0"]
current = false

[node name="Area3D" type="Area3D" parent="SM64Mario"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="SM64Mario/Area3D"]
shape = SubResource("CapsuleShape3D_mgjdh")

[node name="SM64StaticSurfacesHandler" type="Node" parent="."]
script = ExtResource("5_euurp")

[node name="SM64SurfaceObjectsHandler" type="Node" parent="."]
script = ExtResource("6_b7ii8")

[node name="HUD" parent="." instance=ExtResource("7_o8afg")]

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]

[editable path="SM64Mario/CameraRig"]
